fixed small migration bug

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ permissions:
 jobs:
   # Flyway migration tool automated build"
   build:
-    name: Deploy Build
+    name: Automate Database Migration Build
     # The type of runner that the job will run on
     runs-on: self-hosted
     environment: 'build' #Ensure this environment name is setup in the projects Settings>Environment area. Ensuring any reviewers are also configured 
@@ -40,7 +40,7 @@ jobs:
       - name: Migrate Build DB
         if: env.executeBuild == 'true'
         run: |
-          flyway -baselineOnMigrate="true" -licenseKey="${{ secrets.FLYWAY_LICENSE_KEY }}" -configFiles="${{ GITHUB.WORKSPACE }}\flyway.conf" -locations="filesystem:${{ GITHUB.WORKSPACE }}\migrations" info migrate info -url="${{ secrets.DB_CONNECTION_STRING }}" -cleanDisabled='false' -reportFilename="Reports\ValidateVScripts" -user="${{ secrets.DB_USERNAME }} -password="${{ secrets.DB_PASSWORD }}
+          flyway -baselineOnMigrate="true" -licenseKey="${{ secrets.FLYWAY_LICENSE_KEY }}" -configFiles="${{ GITHUB.WORKSPACE }}\flyway.conf" -locations="filesystem:${{ GITHUB.WORKSPACE }}\migrations" info migrate info -url="${{ secrets.DB_CONNECTION_STRING }}" -cleanDisabled='false' -reportFilename="Reports\ValidateVScripts" -user="${{ secrets.DB_USERNAME }}" -password="${{ secrets.DB_PASSWORD }}"
         
   deploy:
     runs-on: ubuntu-latest
