--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: "Terraform action"
+name: "Flyway and Terraform action"
 on:
   push:
     branches:
@@ -18,7 +18,7 @@ jobs:
   build:
     name: Automate Database Migration Build
     # The type of runner that the job will run on
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     environment: 'build' #Ensure this environment name is setup in the projects Settings>Environment area. Ensuring any reviewers are also configured 
     env:
       stage: 'Build'
@@ -34,7 +34,19 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Git checkout
+        uses: actions/checkout@v3
+
+      - name: Download Flyway
+        run: wget -qO- https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/7.7.0/flyway-commandline-7.7.0-linux-x64.tar.gz | tar xvz
+
+      - name: Set up Flyway
+        run: |
+          export FLYWAY_HOME=$(pwd)/flyway-7.7.0
+          export PATH=$PATH:$FLYWAY_HOME
+
+      - name: Verify Flyway Installation
+        run: flyway -version
       
       # Runs the Flyway Clean command against the Build database
       - name: Migrate Build DB
@@ -43,6 +55,7 @@ jobs:
           flyway -user="${{ secrets.DB_USERNAME }}" -password="${{ secrets.DB_PASSWORD }}" -baselineOnMigrate="true" -licenseKey="${{ secrets.FLYWAY_LICENSE_KEY }}" -configFiles="${{ GITHUB.WORKSPACE }}\flyway.conf" -locations="filesystem:${{ GITHUB.WORKSPACE }}\migrations" info migrate info -url="${{ secrets.DB_CONNECTION_STRING }}" -cleanDisabled='false' -reportFilename="Reports\ValidateVScripts"
         
   deploy:
+    name: Automate Database Server Deployment
     runs-on: ubuntu-latest
     defaults:
       run: 
