Fixed syntax issue

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ on:
       - terraform
   pull_request:
 
-env:
-    SQLFLUFF_DIALECT: postgres
-    DOCKER_IMAGE: redgate/flyway
-        SCHEMAS: public
+# env:
+#     SQLFLUFF_DIALECT: postgres
+#     DOCKER_IMAGE: redgate/flyway
+#         SCHEMAS: public
 
 # Permission can be added at job level or workflow level
 permissions:
@@ -31,12 +31,12 @@ jobs:
         run: >-
           docker run --rm
           --volume ${{ github.workspace }}/migrations:/flyway/sql:ro
-          "${{ env.DOCKER_IMAGE }}"
+          redgate/flyway
           -licenseKey="${{ secrets.FLYWAY_LICENSE_KEY }}"
           -url="jdbc:sqlserver://rent-a-crowd-mssql.cwnn1s7lxjgf.eu-west-1.rds.amazonaws.com:1433;authentication=sqlPassword;databaseName=Test;encrypt=true;trustServerCertificate=true"
           -user="${{ secrets.DB_USERNAME }}"
           -password="${{ secrets.DB_PASSWORD }}"
-          -cleanDisabled=false clean migrate -schemas="${{ env.SCHEMAS }}"
+          -cleanDisabled=false clean migrate -schemas="public"
   
   deploy:
     name: Automate Database Server Deployment
