--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,9 @@ jobs:
           --volume ${{ github.workspace }}/migrations:/flyway/sql:ro
           redgate/flyway
           -licenseKey="${{ secrets.FLYWAY_LICENSE_KEY }}"
-          -url="jdbc:sqlserver://rent-a-crowd-mssql.cwnn1s7lxjgf.eu-west-1.rds.amazonaws.com:1433;databaseName=Test;encrypt=true;trustServerCertificate=true"
+          -url="jdbc:sqlserver://rent-a-crowd-mssql.cwnn1s7lxjgf.eu-west-1.rds.amazonaws.com:1433;databaseName=Test"
           -user="${{ secrets.DB_USERNAME }}"
-          -password=MXCU83WecV)$6T1eQI8-MiT-?}Xr
+          -password="${{ secrets.DB_PASSWORD }}"
           -cleanDisabled=false clean migrate -schemas="public"
           
   
