--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         working-directory: ./terraform
-        run: terraform plan -var="image_tag=$GITHUB_REF_NAME"
+        run: terraform plan
         continue-on-error: true
 
       - name: Terraform Plan Status
