--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,16 +86,20 @@ jobs:
       - name: Terraform Plan
         id: plan
         working-directory: ./terraform
-        run: terraform plan
+        run: terraform plan -no-color -out=tfplan
         continue-on-error: true
 
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
+      - name: Save Terraform Plan
+        if: success()
+        run: echo "${{ steps.plan.outputs.stdout }}" > tfplan.tf
+
       - name: Terraform Apply # get's triggered only when there's a push (or merge) request to the main branch
         working-directory: ./terraform
         if: github.ref == 'refs/heads/main' && github.event_name == 'push' 
-        run: terraform apply -auto-approve -input=false 
+        run: terraform apply -auto-approve -input=false tfplan
 
       
