--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           
   
   deploy:
-    name: Automate Database Server Deployment
+    name: Continuous Deployment Build
     runs-on: ubuntu-latest
     defaults:
       run: 
