--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           --volume ${{ github.workspace }}/migrations:/flyway/sql:ro
           redgate/flyway
           -licenseKey="${{ secrets.FLYWAY_LICENSE_KEY }}"
-          -url="jdbc:sqlserver://rent-a-crowd-mssql.cwnn1s7lxjgf.eu-west-1.rds.amazonaws.com:1433;databaseName=Test;encrypt=true;trustServerCertificate=true"
+          -url="jdbc:sqlserver://rent-a-crowd-mssql.cwnn1s7lxjgf.eu-west-1.rds.amazonaws.com:1433;databaseName=RentACrowd;encrypt=true;trustServerCertificate=true"
           -user="bbdFlywayMigration"
           -password="flyway$Migration$Tool"
           -cleanDisabled=false clean migrate
