--- a/flyway.user.toml
+++ b/flyway.user.toml
@@ -1,3 +1,3 @@
 [environments.target1]
-user = "bbdRentACrowd"
+user = "bbdFlywayMigration"
 password = "${localSecret.Flyway Desktop e54e1d98-aa81-4217-a2a4-16dbcf022429}"
