removed the clean command from migration

--- a/.github/workflows/Database_Migration.yml
+++ b/.github/workflows/Database_Migration.yml
@@ -37,4 +37,4 @@ jobs:
           -url="${{ secrets.DB_URL }}"
           -user="${{ secrets.DB_USERNAME }}"
           -password="${{ secrets.DB_PASSWORD }}"
-          -cleanDisabled=false clean migrate
+          -cleanDisabled=false migrate
